# tcheck

./: .gitignore  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake
cmake/: Cache.cmake  CompilerWarnings.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
include/mtch/: matchers.hpp  pattern_matcher.hpp
src/: CMakeLists.txt  decls.hpp  global_error_handler.cpp  global_error_handler.hpp  main.cpp  matchers.cpp  matchers.hpp  password_search.cpp  password_search.hpp  pattern_matcher.cpp  pattern_matcher.hpp
test/: CMakeLists.txt  DateMatcher_test.cpp  PasswordMatcher_test.cpp  PasswordProcessor_test.cpp  UriMatcher_test.cpp
